Fix alignment of Mission & Vision section on Company page

--- a/css/styles.css
+++ b/css/styles.css
@@ -333,15 +333,22 @@ h1 {
 
 .mission-list {
   list-style-type: none;
-  padding-left: 0;
+  padding-left: 1.5rem !important;
   margin-left: auto;
   margin-right: auto;
+  max-width: 680px;
 }
 
 .values-list {
   padding-left: 2.5rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+.mission-list li {
+  position: relative;
+  padding-left: 0.5rem;
+  margin-bottom: 1.2rem;
 }
 
 .leadership-section {
